--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,18 @@
-.App {
+.ts-board {
+  max-width: 500px;
+  margin: 100px auto;
+}
+
+.ts-button {
+  display: flex;
+}
+
+.button-wrapper {
+  margin-top: 20px;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.triangle-type {
+  text-align: center;
+  margin: 34px 0 10px 0;
 }
